libs/@local/hashql/ast/tests/ui/lower/expander/import-resolver/item-not-found.jsonc
//@ run: fail
//@ description: Tests that importing a non-existent item produces an appropriate error with suggestions
["use", "core::bits", { "#tuple": ["lshift"] }, "_"]
//~^ ERROR cannot find item `lshift` in module `core::bits`
